--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ryoma Echizen - Harga GTPS</title>
+  <title>Ryoma Echizen - GTPS Web</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,20 +14,19 @@
 
   <section class="pricing">
     <div class="card">
-      <h2>ROLE VIP</h2>
-      <p class="price">Rp 10.000</p>
+      <h2>Role</h2>
       <p>✔️ Akses item eksklusif<br>✔️ Nama berwarna</p>
       <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
     </div>
+
     <div class="card">
-      <h2>ROLE LEGEND</h2>
-      <p class="price">Rp 25.000</p>
+      <h2>Asset</h2>
       <p>✔️ Semua fitur VIP<br>✔️ Akses ke dunia LEGEND</p>
       <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
     </div>
+
     <div class="card">
-      <h2>ROLE DR</h2>
-      <p class="price">Rp 15.000</p>
+      <h2>Citem</h2>
       <p>✔️ Akses dokter<br>✔️ Item medical premium</p>
       <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
     </div>
@@ -37,4 +36,4 @@
     <p>© 2025 Ryoma Echizen GTPS - All Rights Reserved</p>
   </footer>
 </body>
-      </html>
+</html>
