--- a/index.html
+++ b/index.html
@@ -16,24 +16,16 @@
     <div class="card">
       <h2>Role</h2>
       <p>✔️ Akses item eksklusif<br>✔️ Nama berwarna</p>
-      <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
+      <a href="https://wa.me/6288976695274?text=.payment" class="btn">Beli Sekarang</a>
     </div>
 
     <div class="card">
       <h2>Asset</h2>
       <p>✔️ Semua fitur VIP<br>✔️ Akses ke dunia LEGEND</p>
-      <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
+      <a href="https://wa.me/6288976695274?text=.payment" class="btn">Beli Sekarang</a>
     </div>
 
     <div class="card">
       <h2>Citem</h2>
       <p>✔️ Akses dokter<br>✔️ Item medical premium</p>
-      <a href="https://wa.me/6281315059849" class="btn">Beli Sekarang</a>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2025 Ryoma Echizen GTPS - All Rights Reserved</p>
-  </footer>
-</body>
-</html>
+      <a href="https://wa.me/6288976695274?
