--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ryoma Echizen GTPS</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: white;
@@ -83,138 +82,37 @@
       background: #1ebd5a;
     }
 
-    footer {
-      text-align: center;
-      margin: 50px 0;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Ryoma Echizen GTPS</h1>
-    <p>Server stabil & banyak item gratis</p>
-  </header>
-
-  <div class="container">
-    <div class="card">
-      <h2>Role</h2>
-      <ul class="features">
-        <li>✔ Akses item eksklusif</li>
-        <li>✔ Nama berwarna</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-
-    <div class="card">
-      <h2>Asset</h2>
-      <ul class="features">
-        <li>✔ Semua fitur VIP</li>
-        <li>✔ Akses ke dunia LEGEND</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-
-    <div class="card">
-      <h2>Citem</h2>
-      <ul class="features">
-        <li>✔ Akses dokter</li>
-        <li>✔ Item medical premium</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-  </div>
-
-  <footer>
-    &copy; 2025 Ryoma GTPS - Pricing by kamu 😎
-  </footer>
-
-</body>
-  </html><!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ryoma Echizen GTPS</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
-    }
-
-    header {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      color: #4FC3F7;
-    }
-
-    header p {
-      color: #ccc;
-      margin-top: 10px;
-    }
-
-    .container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding: 30px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .card {
-      background: rgba(0, 0, 0, 0.3);
-      border: 1px solid #00ffff40;
+    .payment-section {
+      max-width: 800px;
+      margin: 40px auto;
+      background-color: rgba(0,0,0,0.3);
+      padding: 30px;
       border-radius: 15px;
-      padding: 30px 20px;
-      width: 300px;
-      box-shadow: 0 0 20px rgba(0,255,255,0.1);
-      transition: 0.3s ease;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
     }
 
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 30px rgba(0,255,255,0.3);
-    }
-
-    .card h2 {
+    .payment-section h2 {
       color: #00ffff;
-      margin-bottom: 15px;
-    }
-
-    .features {
-      text-align: left;
+      text-align: center;
       margin-bottom: 20px;
+    }
+
+    .payment-section ol {
       color: #ccc;
+      font-size: 1rem;
+      line-height: 1.8;
+      padding-left: 20px;
     }
 
-    .features li {
-      margin-bottom: 8px;
+    .payment-section p {
+      text-align: center;
+      margin-top: 20px;
     }
 
-    .btn {
-      background: #25d366;
-      color: white;
-      text-decoration: none;
-      padding: 10px 25px;
-      border-radius: 30px;
+    .payment-section a {
+      color: #25d366;
       font-weight: bold;
-      display: inline-block;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #1ebd5a;
+      text-decoration: none;
     }
 
     footer {
@@ -261,9 +159,23 @@
     </div>
   </div>
 
+  <section class="payment-section">
+    <h2>📦 Cara Pembayaran</h2>
+    <ol>
+      <li>Ketik <b>.daftar ryoma|18</b> ke WhatsApp admin</li>
+      <li>Setelah dibalas, ketik <b>.payment</b> untuk konfirmasi</li>
+      <li>Tunggu admin memproses data kamu</li>
+      <li>Role / item akan dikirim langsung ke akunmu</li>
+    </ol>
+    <p>
+      📞 <b>WhatsApp Admin:</b><br>
+      <a href="https://wa.me/6288976695274?text=.daftar%20ryoma%7C18" target="_blank">Klik di sini untuk chat</a>
+    </p>
+  </section>
+
   <footer>
-    &copy; 2025 Ryoma GTPS - Pricing by Ryoma Echizen😎
+    &copy; 2025 Ryoma GTPS - Pricing Page
   </footer>
 
 </body>
-    </html>
+</html>
