--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
       margin-top: 10px;
     }
 
+    .payment-section {
+      max-width: 800px;
+      margin: 0 auto 40px auto;
+      background-color: rgba(0,0,0,0.3);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+    }
+
+    .payment-section h2 {
+      color: #00ffff;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .payment-section ol {
+      color: #ccc;
+      font-size: 1rem;
+      line-height: 1.8;
+      padding-left: 20px;
+    }
+
+    .payment-section p {
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .payment-section a {
+      color: #25d366;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
     .container {
       display: flex;
       justify-content: center;
@@ -61,6 +94,7 @@
       text-align: left;
       margin-bottom: 20px;
       color: #ccc;
+      font-size: 0.95rem;
     }
 
     .features li {
@@ -82,39 +116,6 @@
       background: #1ebd5a;
     }
 
-    .payment-section {
-      max-width: 800px;
-      margin: 40px auto;
-      background-color: rgba(0,0,0,0.3);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-    }
-
-    .payment-section h2 {
-      color: #00ffff;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .payment-section ol {
-      color: #ccc;
-      font-size: 1rem;
-      line-height: 1.8;
-      padding-left: 20px;
-    }
-
-    .payment-section p {
-      text-align: center;
-      margin-top: 20px;
-    }
-
-    .payment-section a {
-      color: #25d366;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
     footer {
       text-align: center;
       margin: 50px 0;
@@ -130,35 +131,6 @@
     <p>Server stabil & banyak item gratis</p>
   </header>
 
-  <div class="container">
-    <div class="card">
-      <h2>Role</h2>
-      <ul class="features">
-        <li>✔ Akses item eksklusif</li>
-        <li>✔ Nama berwarna</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-
-    <div class="card">
-      <h2>Asset</h2>
-      <ul class="features">
-        <li>✔ Semua fitur VIP</li>
-        <li>✔ Akses ke dunia LEGEND</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-
-    <div class="card">
-      <h2>Citem</h2>
-      <ul class="features">
-        <li>✔ Akses dokter</li>
-        <li>✔ Item medical premium</li>
-      </ul>
-      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
-    </div>
-  </div>
-
   <section class="payment-section">
     <h2>📦 Cara Pembayaran</h2>
     <ol>
@@ -173,9 +145,52 @@
     </p>
   </section>
 
+  <div class="container">
+    <div class="card">
+      <h2>Role</h2>
+      <ul class="features">
+        <li>Cheater: 5.000 PERMA</li>
+        <li>Vip: Free</li>
+        <li>Moderator: 30.000</li>
+        <li>Super Moderator: 40.000</li>
+        <li>Developer: 50.000</li>
+        <li>Super Developer: 70.000</li>
+        <li>Staff: 100.000<br><small>[Unli All Item Kecuali bgl + All Stock Vend & Mag] (3)</small></li>
+        <li>Co Owner: 200.000<br><small>[Unli All + All Stock Vend & Mag + GiveTitle] (2)</small></li>
+      </ul>
+      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
+    </div>
+
+    <div class="card">
+      <h2>Asset</h2>
+      <ul class="features">
+        <li>Dr. Title: Free</li>
+        <li>G4G Title: 10.000</li>
+        <li>Mentor Title: 10.000</li>
+        <li>Legend Title: Free</li>
+        <li>All Title: 10.000</li>
+      </ul>
+      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
+    </div>
+
+    <div class="card">
+      <h2>Citem</h2>
+      <ul class="features">
+        <li>Whip Of Truth: 25.000<br><small>(xgems200 xexp100) (10 Far)</small></li>
+        <li>Serpent: 20.000<br><small>(xgems100 xexp50) (7 Farm)</small></li>
+        <li>Levi: 10.000<br><small>xp50</small></li>
+        <li>Sasuke: 15.000<br><small>xp100</small></li>
+        <li>Sung Jin Woo: 25.000<br><small>xp50 gems100</small></li>
+        <li>Ichigo Fosto: 25.000<br><small>xp50 gems100</small></li>
+        <li>Shanks: 25.000<br><small>xp50 gems100</small></li>
+      </ul>
+      <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
+    </div>
+  </div>
+
   <footer>
-    &copy; 2025 Ryoma GTPS - Pricing Page
+    &copy; 2025 Ryoma GTPS - Halaman Harga & Pembayaran
   </footer>
 
 </body>
-</html>
+      </html>
