--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ryoma Echizen GTPS</title>
+  <title>GrowEarth Assets</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      font-family: 'Roboto', sans-serif;
+      background: #1a1a1a;
       color: white;
     }
 
     header {
       text-align: center;
       padding: 40px 20px;
+      background: #0f2027;
     }
 
     header h1 {
@@ -28,36 +30,39 @@
     }
 
     .payment-section {
-      max-width: 800px;
-      margin: 0 auto 40px auto;
-      background-color: rgba(0,0,0,0.3);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      max-width: 600px;
+      margin: 20px auto;
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
     }
 
     .payment-section h2 {
       color: #00ffff;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
-    .payment-section ol {
-      color: #ccc;
-      font-size: 1rem;
-      line-height: 1.8;
-      padding-left: 20px;
+    .payment-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
     }
 
-    .payment-section p {
-      text-align: center;
-      margin-top: 20px;
+    .payment-table th, .payment-table td {
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      padding: 8px;
+      text-align: left;
     }
 
-    .payment-section a {
-      color: #25d366;
-      font-weight: bold;
-      text-decoration: none;
+    .payment-table th {
+      background: rgba(0, 255, 255, 0.1);
+      color: #00ffff;
+    }
+
+    .payment-table tr:hover {
+      background: rgba(0, 255, 255, 0.2);
     }
 
     .container {
@@ -65,51 +70,32 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
-      padding: 30px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
+      padding: 20px;
     }
 
     .card {
-      background: rgba(0, 0, 0, 0.3);
-      border: 1px solid #00ffff40;
-      border-radius: 15px;
-      padding: 30px 20px;
-      width: 300px;
-      box-shadow: 0 0 20px rgba(0,255,255,0.1);
-      transition: 0.3s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 30px rgba(0,255,255,0.3);
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      padding: 20px;
+      width: 250px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+      text-align: center;
     }
 
     .card h2 {
       color: #00ffff;
-      margin-bottom: 15px;
-    }
-
-    .features {
-      text-align: left;
-      margin-bottom: 20px;
-      color: #ccc;
-      font-size: 0.95rem;
-    }
-
-    .features li {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     .btn {
       background: #25d366;
       color: white;
       text-decoration: none;
-      padding: 10px 25px;
-      border-radius: 30px;
+      padding: 8px 15px;
+      border-radius: 20px;
       font-weight: bold;
       display: inline-block;
-      transition: 0.3s;
+      transition: background 0.3s;
     }
 
     .btn:hover {
@@ -118,7 +104,7 @@
 
     footer {
       text-align: center;
-      margin: 50px 0;
+      margin: 20px 0;
       font-size: 0.9rem;
       color: #aaa;
     }
@@ -127,70 +113,77 @@
 <body>
 
   <header>
-    <h1>Ryoma Echizen GTPS</h1>
-    <p>Server stabil & banyak item gratis</p>
+    <h1>GrowEarth Assets </h1>
+    <p>BUY/SELL BLACK 5K-10K/1 BLACK GEM LOCK</p>
   </header>
-
-  <section class="payment-section">
-    <h2>📦 Cara Pembayaran</h2>
-    <ol>
-      <li>Ketik <b>.daftar ryoma|18</b> ke WhatsApp admin</li>
-      <li>Setelah dibalas, ketik <b>.payment</b> untuk konfirmasi</li>
-      <li>Tunggu admin memproses data kamu</li>
-      <li>Role / item akan dikirim langsung ke akunmu</li>
-    </ol>
-    <p>
-      📞 <b>WhatsApp Admin:</b><br>
-      <a href="https://wa.me/6288976695274?text=.daftar%20ryoma%7C18" target="_blank">Klik di sini untuk chat</a>
-    </p>
-  </section>
 
   <div class="container">
     <div class="card">
       <h2>Role</h2>
-      <ul class="features">
-        <li>Cheater: 5.000 PERMA</li>
-        <li>Vip: Free</li>
-        <li>Moderator: 30.000</li>
-        <li>Super Moderator: 40.000</li>
-        <li>Developer: 50.000</li>
-        <li>Super Developer: 70.000</li>
-        <li>Staff: 100.000<br><small>[Unli All Item Kecuali bgl + All Stock Vend & Mag] (3)</small></li>
-        <li>Co Owner: 200.000<br><small>[Unli All + All Stock Vend & Mag + GiveTitle] (2)</small></li>
-      </ul>
+      <p>Devoloper: 50.000</p>
+       <p>Super Devoloper: 70.000</p>
+       <p>Unli Role</p>
+      <p>Staff: 100.000</p>
+      <p>Co.Owner: 200.000</p>
       <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
     </div>
 
     <div class="card">
       <h2>Asset</h2>
-      <ul class="features">
-        <li>Dr. Title: Free</li>
-        <li>G4G Title: 10.000</li>
-        <li>Mentor Title: 10.000</li>
-        <li>Legend Title: Free</li>
-        <li>All Title: 10.000</li>
-      </ul>
+       <p>Cheater Perma:25.000</p>
+      <p>G4G Title: 15.000</p>
+      <p>Mentor Title: 15.000</p>
+      <p>ALL TITLE: 25.000</p>
       <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
     </div>
 
     <div class="card">
       <h2>Citem</h2>
-      <ul class="features">
-        <li>Whip Of Truth: 25.000<br><small>(xgems200 xexp100) (10 Far)</small></li>
-        <li>Serpent: 20.000<br><small>(xgems100 xexp50) (7 Farm)</small></li>
-        <li>Levi: 10.000<br><small>xp50</small></li>
-        <li>Sasuke: 15.000<br><small>xp100</small></li>
-        <li>Sung Jin Woo: 25.000<br><small>xp50 gems100</small></li>
-        <li>Ichigo Fosto: 25.000<br><small>xp50 gems100</small></li>
-        <li>Shanks: 25.000<br><small>xp50 gems100</small></li>
-      </ul>
+      <p>Whip Of Truth X100xp: 25.000</p>
+      <p>Sung jin woo  x250xp x250gems: 50.000</p>
+      <p>chigo Fosto x100xp x100gems: 30.000</p>
+       <p>Shanks x50xp x100gems: 25.000</p>
       <a href="https://wa.me/6288976695274?text=.payment" class="btn" target="_blank">.payment</a>
     </div>
   </div>
+
+  <section class="payment-section">
+    <h2>📦 Cara Pembayaran</h2>
+    <table class="payment-table">
+        <thead>
+            <tr>
+                <th>Langkah</th>
+                <th>Deskripsi</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1. Daftar</td>
+                <td>Ketik <b>.daftar ryoma|18</b> ke WhatsApp admin</td>
+            </tr>
+            <tr>
+                <td>2. Konfirmasi</td>
+                <td>Setelah dibalas, ketik <b>.payment</b> untuk konfirmasi</td>
+            </tr>
+            <tr>
+                <td>3. Tunggu Proses</td>
+                <td>Tunggu admin memproses data kamu</td>
+            </tr>
+            <tr>
+                <td>4. Dapatkan Item</td>
+                <td>Role / item akan dikirim langsung ke akunmu</td>
+            </tr>
+        </tbody>
+    </table>
+    <p>
+     <align:center>📞 <b>WhatsApp Admin:</align:center></b><br>
+      <a href="https://wa.me/6288976695274?text=.daftar%20ryoma%7C18" class="btn" target="_blank">Chat Admin</a>
+    </p>
+  </section>
 
   <footer>
     &copy; 2025 Ryoma GTPS - Halaman Harga & Pembayaran
   </footer>
 
 </body>
-      </html>
+  </html>
